5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4478/executions/1764_1183.log
== TEST (2019-05-27 21:47:30) 
-- CODE:
from numpy import*
num = array(eval(input("numeros interos")))
cont = 0
tam = size(num)
while(cont<tam):
	if(num[cont]>0):
		n = n + 1
	cont = cont + 1
vtnum = zeros(n, dtype=int)
i = 0
i2 = 0
while(i < size(num)):
	if(num[i]>0):
		vtnum[i2] = num[i]
		i2 = i2 + 1
	i = i+1
print(vtnum)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 21:47:47) 
-- CODE:
from numpy import*
num = array(eval(input("numeros interos: ")))
cont = 0
tam = size(num)
while(cont<tam):
	if(num[cont]>0):
		n = n + 1
	cont = cont + 1
vtnum = zeros(n, dtype=int)
i = 0
i2 = 0
while(i < size(num)):
	if(num[i]>0):
		vtnum[i2] = num[i]
		i2 = i2 + 1
	i = i+1
print(vtnum)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 21:48:13) 
-- CODE:
from numpy import*
num = array(eval(input("numeros interos: ")))
cont = 0
tam = size(num)
while(cont<tam):
	if(num[cont]>0):
		n = n + 1
	cont = cont + 1
vtnum = zeros(n, dtype=int)
i = 0
i2 = 0
while(i < size(num)):
	if(num[i]>0):
		vtnum[i2] = num[i]
		i2 = i2 + 1
	i = i+1
print(vtnum)
-- EXECUTION TIME:
0.539349
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1183/main.py", line 7, in <module>
    n = n + 1
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 21:48:31) 
-- CODE:
from numpy import*
num = array(int(input("numeros interos: ")))
cont = 0
tam = size(num)
while(cont<tam):
	if(num[cont]>0):
		n = n + 1
	cont = cont + 1
vtnum = zeros(n, dtype=int)
i = 0
i2 = 0
while(i < size(num)):
	if(num[i]>0):
		vtnum[i2] = num[i]
		i2 = i2 + 1
	i = i+1
print(vtnum)
-- EXECUTION TIME:
0.531628
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1183/main.py", line 2, in <module>
    num = array(int(input()))
ValueError: invalid literal for int() with base 10: '[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 09:04:22) 
-- CODE:
from numpy import*
vt = array(eval(input("qualquer numero inteiro: ")))
cont = 0
cvet = 0
NP = 0
while(cont < cvet):
	if(cvet[cont] > 0):
		NP =  NP + 1
	cont = cont + 1

nvet = zeros(NP, dtype=int)
i = 0
i2 = 0
while(i < size(vt)):
	if(vt[i] > 0):
		nvet[i2] = vt[i]
		i2 = i2 + 1
	i = i+ 1
print(nvet)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 09:04:29) 
-- CODE:
from numpy import*
vt = array(eval(input("qualquer numero inteiro: ")))
cont = 0
cvet = 0
NP = 0
while(cont < cvet):
	if(cvet[cont] > 0):
		NP =  NP + 1
	cont = cont + 1

nvet = zeros(NP, dtype=int)
i = 0
i2 = 0
while(i < size(vt)):
	if(vt[i] > 0):
		nvet[i2] = vt[i]
		i2 = i2 + 1
	i = i+ 1
print(nvet)

-- EXECUTION TIME:
0.348843
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1183/main.py", line 16, in <module>
    nvet[i2] = vt[i]
IndexError: index 0 is out of bounds for axis 0 with size 0

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 15:36:33) 
-- CODE:
from numpy import* 
notas = array(
alunos = array(


faltou = 0
aprovados = 0
reprovados = 0
medpres = 0
presentes = 0
i = 0

while(i < size(notas)):
	if(notas[i] == -1):
		faltou = faltou + 1
		
	if(notas[i] >= 6 and notas[i] <= 10 ):
		aprovados = aprovados + 1
		medpres = medpres + notas[i]
		
	if(notas[i] >= 0 and notas[i] < 6):
		reprovados = reprovados + 1
		medpres = medpres + notas[i]
		
	if(notas[i] == max(notas)):
		maior_nota = alunos[i]
	i = i + 1
	
alunosP = reprovados + aprovados
media = medpres/alunosP

print(faltou)
print(aprovados)
print(reprovados)
print(round((media),2))
print(maior_nota)

-- EXECUTION TIME:
0.14585
-- ERROR:
  File "/home/codebench/codes/1764/1183/main.py", line 7
    aprovados = 0
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 15:38:35) 
-- CODE:
from numpy import* 
vet = array(eval(input("numeros: "))
i = 0
tamanho = size(vet)
Numeros_Posit = 0
while(i < tamanho):
	if(vet[i] > 0):
		Numeros_Posit =  Numeros_Posit + 1
	i = i + 1
novo_vet = zeros(Numeros_Posit, dtype=int)
i = 0
i2 = 0
while(i < size(vet)):
	if(vet[i] > 0):
		novo_vet[i2] = vet[i]
		i2 = i2 + 1
	i = i+ 1
print(novo_vet)
-- EXECUTION TIME:
0.191861
-- ERROR:
  File "/home/codebench/codes/1764/1183/main.py", line 3
    i = 0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:39:01) 
-- CODE:
from numpy import* 
vet = array(eval(input("numeros: "))
i = 0
tamanho = size(vet)
Numeros_Posit = 0
while(i < tamanho):
	if(vet[i] > 0):
		Numeros_Posit =  Numeros_Posit + 1
	i = i + 1
novo_vet = zeros(Numeros_Posit, dtype=int)
i = 0
i2 = 0
while(i < size(vet)):
	if(vet[i] > 0):
		novo_vet[i2] = vet[i]
		i2 = i2 + 1
	i = i+ 1
print(novo_vet)
-- ERROR:
File "XXXX", line 3
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:42:28) 
-- CODE:
from numpy import* 
vet = array(eval(input("numeros: "))
i = 0
tamanho = size(vet)
Numeros_Posit = 0
while(i < tamanho):
	if(vet[i] > 0):
		Numeros_Posit =  Numeros_Posit + 1
	i = i + 1
novo_vet = zeros(Numeros_Posit, dtype=int)
i = 0
i2 = 0
while(i < size(vet)):
	if(vet[i] > 0):
		novo_vet[i2] = vet[i]
		i2 = i2 + 1
	i = i+ 1
print(novo_vet)
-- ERROR:
File "XXXX", line 3
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:42:59) 
-- CODE:
from numpy import* 
vet = array(eval(input("numeros: "))
i = 0
tamanho = size(vet)
Numeros_Posit = 0
while(i < tamanho):
	if(vet[i] > 0):
		Numeros_Posit =  Numeros_Posit + 1
	i = i + 1
novo_vet = zeros(Numeros_Posit, dtype=int)
i = 0
i2 = 0
while(i < size(vet)):
	if(vet[i] > 0):
		novo_vet[i2] = vet[i]
		i2 = i2 + 1
	i = i+ 1
print(novo_vet)
-- ERROR:
File "XXXX", line 3
    i = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:43:36) 
-- CODE:
from numpy import* 
vet = array(eval(input("numeros: ")
tamanho = size(vet)
Numeros_Posit = 0
while(i < tamanho):
	if(vet[i] > 0):
		Numeros_Posit =  Numeros_Posit + 1
	i = i + 1
novo_vet = zeros(Numeros_Posit, dtype=int)
i = 0
i2 = 0
while(i < size(vet)):
	if(vet[i] > 0):
		novo_vet[i2] = vet[i]
		i2 = i2 + 1
	i = i+ 1
print(novo_vet)
-- ERROR:
File "XXXX", line 3
    tamanho = size(vet)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 15:53:13) 
-- CODE:
from numpy import*

vetor = array(eval(input("Informe os valores: ")))

posicao = 0
posicaoX = 0

while(posicao < size(vetor)):
	if(vetor[posicao] > 0):
		posicaoX  =  posicaoX  + 1
	posicao = posicao + 1

nvet = zeros(posicaoX , dtype=int)

i = 0
i2 = 0

while(i < size(vetor)):
	if(vetor[i] > 0):
		nvet[i2] = vetor[i]
		i2 = i2 + 1
	i = i+ 1
	
print(nvet)
-- EXECUTION TIME:
0.39659
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
